/*
 * Copyright (c) 2020, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 *
 * WSO2 Inc. licenses this file to you under the Apache License,
 * Version 2.0 (the "License"); you may not use this file except
 * in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

import org.apache.tools.ant.taskdefs.condition.Os
import org.gradle.process.ExecOperations
import org.gradle.jvm.toolchain.JavaLanguageVersion
import org.gradle.jvm.toolchain.JavaToolchainService
import javax.inject.Inject

abstract class BallerinaExecHelper {
    @Inject abstract ExecOperations getExecOperations()
}

abstract class PatchBallerinaScriptsTask extends DefaultTask {
    @Inject abstract JavaToolchainService getJavaToolchainService()

    @TaskAction
    void patch() {
        def launcher = javaToolchainService.launcherFor { spec ->
            spec.languageVersion.set(JavaLanguageVersion.of(25))
        }.get()
        def java25Home = launcher.executablePath.asFile.parentFile.parentFile.absolutePath

        def binDirs = [
            project.layout.buildDirectory.dir("jballerina-tools-${project.ballerinaLangVersion}/bin").get().asFile,
            new File("${project.rootDir}/target/ballerina-runtime/bin")
        ]
        binDirs.each { binDir ->
            if (binDir.exists()) {
                binDir.eachFile { file ->
                    file.setExecutable(true)
                    if (!file.name.endsWith('.bat') && !file.name.endsWith('.cmd')) {
                        def original = file.text
                        def lines = original.split('\n').toList()
                        lines = lines.findAll { !it.contains('--sun-misc-unsafe-memory-access=allow') }
                        // Inject JAVA_HOME override immediately after the shebang line
                        def shebangIdx = lines.findIndexOf { it.startsWith('#!') }
                        if (shebangIdx >= 0) {
                            lines.add(shebangIdx + 1, "export JAVA_HOME='${java25Home}'")
                        }
                        def patched = lines.join('\n') + '\n'
                        if (patched != original) {
                            file.text = patched
                        }
                    }
                }
            }
        }
    }
}

buildscript {
    repositories {
        mavenLocal()
        maven {
            url = 'https://maven.pkg.github.com/ballerina-platform/plugin-gradle'
            credentials {
                username System.getenv("packageUser")
                password System.getenv("packagePAT")
            }
        }
    }
    dependencies {
        classpath "io.ballerina:plugin-gradle:${project.ballerinaGradlePluginVersion}"
    }
}

plugins {
    id 'io.ballerina.plugin'
}

description = 'Ballerina - JWT Ballerina Generator'

def packageName = "jwt"
def packageOrg = "ballerina"
def tomlVersion = stripBallerinaExtensionVersion("${project.version}")
def ballerinaTomlFile = new File("$project.projectDir/Ballerina.toml")
def ballerinaTomlFilePlaceHolder = new File("${project.rootDir}/build-config/resources/Ballerina.toml")
def compilerPluginTomlFilePlaceHolder = new File("${project.rootDir}/build-config/resources/CompilerPlugin.toml")
def compilerPluginTomlFile = new File("$project.projectDir/CompilerPlugin.toml")

def stripBallerinaExtensionVersion(String extVersion) {
    if (extVersion.matches(project.ext.timestampedVersionRegex)) {
        def splitVersion = extVersion.split('-')
        if (splitVersion.length > 3) {
            def strippedValues = splitVersion[0..-4]
            return strippedValues.join('-')
        } else {
            return extVersion
        }
    } else {
        return extVersion.replace("${project.ext.snapshotVersion}", "")
    }
}

ballerina {
    packageOrganization = packageOrg
    module = packageName
    langVersion = ballerinaLangVersion
}

tasks.register('updateTomlFiles') {
    doLast {
        def newBallerinaToml = ballerinaTomlFilePlaceHolder.text.replace("@project.version@", project.version)
        def newCompilerPluginToml = compilerPluginTomlFilePlaceHolder.text.replace("@project.version@", project.version)
        newBallerinaToml = newBallerinaToml.replace("@toml.version@", tomlVersion)
        ballerinaTomlFile.text = newBallerinaToml
        compilerPluginTomlFile.text = newCompilerPluginToml
    }
}

tasks.register('commitTomlFiles') {
    def execHelper = project.objects.newInstance(BallerinaExecHelper)
    doLast {
        execHelper.execOperations.exec {
            ignoreExitValue true
            if (Os.isFamily(Os.FAMILY_WINDOWS)) {
                commandLine 'cmd', '/c', "git commit -m \"[Automated] Update the native jar versions\" Ballerina.toml Dependencies.toml CompilerPlugin.toml"
            } else {
                commandLine 'sh', '-c', "git commit -m '[Automated] Update the native jar versions' Ballerina.toml Dependencies.toml CompilerPlugin.toml"
            }
        }
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            artifact source: createArtifactZip, extension: 'zip'
        }
    }
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/ballerina-platform/module-${packageOrg}-${packageName}")
            credentials {
                username = System.getenv("publishUser")
                password = System.getenv("publishPAT")
            }
        }
    }
}

tasks.register('startBallerinaSTS') {
    def execHelper = project.objects.newInstance(BallerinaExecHelper)
    doLast {
        // This check is added to prevent starting the server in Windows OS, since the Docker image does not support
        // for Windows OS.
        if (!Os.isFamily(Os.FAMILY_WINDOWS)) {
            def stdOut = new ByteArrayOutputStream()
            execHelper.execOperations.exec {
                commandLine 'sh', '-c', "docker ps --filter name=ballerina-sts"
                standardOutput = stdOut
            }
            if (!stdOut.toString().contains("ballerina-sts")) {
                println "Starting Ballerina STS."
                execHelper.execOperations.exec {
                    commandLine 'sh', '-c', "docker run --rm -d -p 9445:9445 -p 9444:9444 --name ballerina-sts ldclakmal/ballerina-sts:latest"
                    standardOutput = stdOut
                }
                println stdOut.toString()
                println "Waiting 10s until the Ballerina STS get initiated."
                sleep(15 * 1000)
            } else {
                println "Ballerina STS is already started."
            }
        }
    }
}
startBallerinaSTS.onlyIf { !project.gradle.startParameter.excludedTaskNames.contains('test') }

tasks.register('stopBallerinaSTS') {
    def execHelper = project.objects.newInstance(BallerinaExecHelper)
    doLast {
        // This check is added to prevent trying to stop the server in Windows OS, since the Docker image not started
        // in Windows OS.
        if (!Os.isFamily(Os.FAMILY_WINDOWS)) {
            def stdOut = new ByteArrayOutputStream()
            execHelper.execOperations.exec {
                commandLine 'sh', '-c', "docker ps --filter name=ballerina-sts"
                standardOutput = stdOut
            }
            if (stdOut.toString().contains("ballerina-sts")) {
                println "Stopping Ballerina STS."
                execHelper.execOperations.exec {
                    commandLine 'sh', '-c', "docker stop ballerina-sts"
                    standardOutput = stdOut
                }
                println stdOut.toString()
                println "Waiting 15s until the Ballerina STS get stopped."
                sleep(15 * 1000)
            } else {
                println "Ballerina STS is not started."
            }
        }
    }
}
stopBallerinaSTS.onlyIf { !project.gradle.startParameter.excludedTaskNames.contains('test') }

tasks.register('patchBallerinaScripts', PatchBallerinaScriptsTask) {
    dependsOn 'unpackJballerinaTools'
    outputs.upToDateWhen { !tasks.named('unpackJballerinaTools').get().didWork }
    jballerinaToolsBinPath = layout.buildDirectory.dir("jballerina-tools-${project.ballerinaLangVersion}/bin").get().asFile.absolutePath
    ballerinaRuntimeBinPath = "${rootProject.projectDir.absolutePath}/target/ballerina-runtime/bin"
}

updateTomlFiles.dependsOn copyStdlibs
copyStdlibs.dependsOn patchBallerinaScripts


test.finalizedBy stopBallerinaSTS
test.dependsOn startBallerinaSTS
test.dependsOn ":${packageName}-native:build"
test.dependsOn ":${packageName}-compiler-plugin:build"
test.dependsOn patchBallerinaScripts

build.dependsOn ":${packageName}-compiler-plugin:build"
build.dependsOn "generatePomFileForMavenPublication"
build.finalizedBy stopBallerinaSTS
build.dependsOn startBallerinaSTS
build.dependsOn ":${packageName}-native:build"
build.dependsOn patchBallerinaScripts

publishToMavenLocal.dependsOn build
publish.dependsOn build
